--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "express": "~4.8.6",
     "body-parser": "~1.6.6",
     "cookie-parser": "~1.3.2",
-    "morgan": "~1.2.3",
-    "serve-favicon": "~2.0.1",
     "debug": "~1.0.4",
-    "jade": "~1.5.0"
+    "express": "~4.8.6",
+    "jade": "~1.5.0",
+    "moment": "^2.8.3",
+    "morgan": "~1.2.3",
+    "serve-favicon": "~2.0.1"
   }
 }
