--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "cookie-parser": "~1.3.2",
     "debug": "~1.0.4",
     "express": "~4.8.6",
+    "express-session": "^1.9.1",
     "jade": "~1.5.0",
     "moment": "^2.8.3",
+    "mongoose": "^3.8.19",
     "morgan": "~1.2.3",
     "serve-favicon": "~2.0.1"
   }
