--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "angular-loading-bar": "^0.6.0",
     "body-parser": "~1.6.6",
     "cookie-parser": "~1.3.2",
     "debug": "~1.0.4",
