--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "angular-loading-bar": "^0.6.0",
     "body-parser": "~1.6.6",
+    "busboy": "^0.2.9",
     "cookie-parser": "~1.3.2",
     "debug": "~1.0.4",
     "express": "~4.8.6",
